# market-viewer-firmware

./: readme.md
lib/GuiManager/: GuiManager.cpp
lib/ScreenTypes/: BaseScreen.cpp  ClockScreen.cpp  CryptoScreen.cpp  TimerScreen.cpp  TimerScreen.h
lib/ScreensManager/: ScreensManager.cpp  ScreensManager.h
lib/WifiConfig/: WifiConfig.cpp
lib/custom_ui_helper/: startupEvents.cpp  startupEvents.h
lib/ui/: CMakeLists.txt  filelist.txt  ui.h  ui_clockScreen.c  ui_cryptoScreen.c  ui_cryptoScreen.h  ui_events.cpp  ui_events.h  ui_font_digitsFont100.c  ui_font_digitsFontSmall.c  ui_homeScreen.c  ui_homeScreen.h  ui_img_301975032.c  ui_img_650757212.c  ui_img_purple_background_png.c  ui_timerScreen.c  ui_timerScreen.h
src/: main.cpp
