SET(SOURCES ui_homeScreen.c
    ui_brightnessScreen.c
    ui_volumeScreen.c
    ui_wifiScreen.c
    ui_screensScreen.c
    ui_cryptoScreen.c
    ui_marketDataSettingScreen.c
    ui_stockScreen.c
    ui_clockScreen.c
    ui_timerScreen.c
    ui_theme_manager.cpp
    ui_themes.cpp
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_events.cpp
    ui_img_1314322640.c
    ui_img_650757212.c
    ui_img_1826884842.c
    ui_img_367695115.c
    ui_img_871200326.c
    ui_img_555948897.c
    ui_img_301975032.c
    ui_img_1272477160.c
    ui_img_1702299517.c
    ui_img_536642073.c
    ui_img_9953116.c
    ui_img_788343386.c
    ui_img_936315526.c
    ui_img_red_background_png.c
    ui_img_121694436.c
    ui_img_green_background_png.c
    ui_img_1458903039.c
    ui_img_gauge_background_png.c
    ui_img_needle_small_png.c
    ui_img_needle_big_png.c
    ui_img_purple_background_png.c
    ui_img_1970864515.c
    ui_img_461506120.c
    ui_img_81954201.c
    fonts/ui_font_digitsFont100.c
    fonts/ui_font_digitsFontSmall.c
    fonts/ui_font_Mono20.c
    fonts/ui_font_mono30.c
    fonts/ui_font_mono40.c
    fonts/ui_font_mono50.c
    fonts/ui_font_monoBold100.c
    fonts/ui_font_monoBold20.c
    fonts/ui_font_monoBold50.c
    fonts/ui_font_monoBold60.c
    fonts/ui_font_monoBold80.c
    fonts/ui_font_monoLight30.c)

add_library(ui ${SOURCES})
